2004-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.7.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  writing release notes for gstreamer 0.8.7

2004-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.5.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  writing release notes for gst-plugins 0.8.5

2004-10-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	  releasing gstreamer 0.8.6

2004-10-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.6.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  writing release notes

2004-08-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/data-get:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  releasing gst-plugins 0.8.4

2004-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/download/fedora.xml:
	  fix download location for yum

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gstreamer/0.8.5.xml:
	  releasing

2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.5.xml:
	  adding bugs

2004-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/page.xsl:
	* src/htdocs/releases/gstreamer/0.8.5.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	* src/htdocs/releases/releases.xsl:
	* src/htdocs/releases/text.xsl:
	  add API changes to release notes.
	  preliminary core 0.8.5 release notes.

2004-08-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	  releasing

2004-08-02  Thomas Vander Stichele  <thomas at apestaart dot org>
