@@ -1,0 +1,42 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-ffmpeg</module>
+  <module-fancy>GStreamer FFmpeg</module-fancy>
+  <name>Titan Shifting Gears</name>
+  <version>0.8.2</version>
+
+  <intro>
+<p>
+The GStreamer team is happy to announce a new stable release of the
+FFmpeg-based GStreamer plugin.
+</p>
+<p>
+This module is separated from GStreamer Plugins for easier maintenance
+and decoupled release cycles.
+Our CVS contains both the patched source code to FFmpeg, as well as the
+set of patches against upstream CVS, so we can send patches upstream
+regularly from our modifications.
+</p>
+  </intro>
+  <features>
+    <feature>codecs for most popular formats</feature>
+    <feature>optimized colorspace conversion</feature>
+    <feature>stability and synchronization fixes</feature>
+  </features>
+  <contributors>
+    <person>Ronald Bultje</person>
+    <person>Thomas Vander Stichele</person>
+    <person>Iain Holmes</person>
+  </contributors>
+  <bugs>
+    <bug>
+      <id>150449</id>
+      <summary>ffdemux_mpegts causes internal error: push on pad</summary>
+    </bug>
+    <bug>
+      <id>152798</id>
+      <summary>wmv2/wma2 file fails to play back</summary>
+    </bug>
+  </bugs>
+</release>
