@@ -1,3 +1,8 @@
+2004-10-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/htdocs/releases/gst-ffmpeg/0.8.2.xml:
+	  writing release notes for gst-ffmpeg 0.8.2.
+
 2004-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/releases/gstreamer/0.8.7.xml:
